--- a/Nyxapi-front/src/index.css
+++ b/Nyxapi-front/src/index.css
@@ -61,3 +61,13 @@
       "YTUC" 712;
   }
   
+  .transition-transform {
+    transition: transform 0.3s ease-in-out;
+  }
+  .translate-x-0 {
+    transform: translateX(0);
+  }
+  .-translate-x-full {
+    transform: translateX(-100%);
+  }
+  
